lab1/Test/L1-A-12-26.output
Error Type B at Line 3
Error Type A at Line 15
Error Type A at Line 24
Error Type A at Line 37
Error Type B at Line 38
Error Type A at Line 44
Error Type B at Line 47
