lab1/Test/L1-A-12-26.cmm
struct s13K_Zl {
  int Qhq3_mJset2V8Y8mjXtF [ 1425955800 ] = ATE = 
    lcsxoMcHliamSy || && KbFGO != MParsFq12 ( zgsLPar 
    > ff1hDlCaV4hLQNyzOKrK + a5JioQNMjjxMLV4zz * N9K82eqviFxEJWFCAt 
    [ Se = VQNifsd3Om && P1ESboPKs9H == rUAPHh1xmK0eOG 
    / ( XygHzCiM3U || qUtbEuKt8EpM3 >= - - - ru9V2KqsX7AVXx4adv 
    [ w9D_BR <= - ( gbY6x7XFgD = VKoC67BkqYhvz68W4 < - 
    - - ( FJgAXRvqBV != ! oS ( vCw , u ) ) ) ] ) + 1552078012.907569116 
    - ( - 206171050 ) - Vx ] / ! - Mpd4XmlwTpICwNoL ( 
    ) . _qKYza0iMBOg ) ;
}IBVLvO6 
;
float ;
struct rWa5ittkaaFI m7U6fGYq8f8C ( ) {
}\
int ;
struct Pct0a0o ;
int ;
struct {
  int IOkeFDKple , n , Uj3hVaJwQ13yWQnidzWO , HtWu1 
    ;
};
int ;
int GNffs ( int xeQz72NivvJvkZw ) `{
  if ( QWyn )   JuFnGt5NwK60_54t4m ;
else   return kD2OmlGOjjG9EzZPG ;

}
int VLuCpdAqdNTSz3 , JrfDv 

;
int ceA0YQu ( ) {
  _9utIJlt ;
  Kgleoon_yYXrV28ID ;
  SkD61JC ;
  H4 ;
  if $( gzKJE19Ruf )   ipHdWR8Nn ;
else   if ( BlYOO )   while _8ClxuT0WXTt ) {
  }


}
int bC ( ) {
\}
int ;
int ync2gu6muZu4a6uH6uGH ( int zSGti2 , int lEahfLmfczmVx 
  ) }
